@startuml STAGE_STATE_MACHINE
!theme plain
skinparam backgroundColor white

title Primary Stage State Machine

[*] --> searching : New placement request

searching --> pending_review : Manual review needed
searching --> no_beds : call_outcome(no_beds)
searching --> packet_sent : docs_sent/packet_sent
searching --> denied : call_outcome(facility_denied)
searching --> canceled : call_outcome(patient_denies)

pending_review --> searching : Review completed
pending_review --> denied : Facility rejects
pending_review --> canceled : Patient withdraws
pending_review --> packet_sent : Documentation ready

no_beds --> searching : Retry later
no_beds --> packet_sent : docs_sent
no_beds --> denied : Facility rejects
no_beds --> canceled : Patient withdraws

packet_sent --> accepted : acceptance event
packet_sent --> denied : Facility rejects
packet_sent --> canceled : Patient withdraws
packet_sent --> expired : Time limit exceeded

accepted --> waiting_transport : transport_scheduled
accepted --> denied : Facility rescinds
accepted --> canceled : Patient withdraws
accepted --> expired : hold_until exceeded\n(no newer acceptance)

waiting_transport --> [*] : Transport completed\n(archived)
waiting_transport --> canceled : Patient withdraws
waiting_transport --> denied : Facility issue

' Terminal states
denied --> [*] : Archived
canceled --> [*] : Archived
expired --> [*] : Archived

' Override transitions (rare admin actions)
searching --> denied : status_override
searching --> canceled : status_override
pending_review --> accepted : status_override
no_beds --> accepted : status_override
packet_sent --> denied : status_override
accepted --> denied : status_override

note top of searching : "Initial state for all\nnew placement requests"

note right of accepted : "hold_until timestamp\ncontrols expiration\nif no newer acceptance"

note bottom of waiting_transport : "Final active state\nbefore archival"

note left of denied : "Terminal state\nNo further progression"

note left of canceled : "Terminal state\nPatient decision final"

note left of expired : "Terminal state\nTime-based transition"

note as N1
  Status precedence (highest to lowest):
  1. canceled (patient/facility denies)
  2. denied (facility rejection)
  3. expired (hold_until passed)
  4. waiting_transport
  5. accepted
  6. packet_sent
  7. no_beds
  8. pending_review
  9. searching
end note

note as N2
  Facets (status chips) are independent
  of primary stage and can coexist:
  - accepted, hold, transport
  - docs, recheck, insurance
  - reassess, note
end note

@enduml